Shaped data, grouped data by hours, displayed all the hour data on the graph, now i have to divide them by measuring station

--- a/notebooks/Intial data analysis.ipynb
+++ b/notebooks/Intial data analysis.ipynb
@@ -18,15 +18,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "“timeStamp”: is the date time of the mesure.\n",
+    "`“timeStamp”`: is the date time of the mesure.\n",
     "\n",
-    "“Idflowmeter”: is the ID of the meter The peculiar series of water measures for two sensor IDs are yet to be explained by Braila.\n",
+    "`“Idflowmeter”`: is the ID of the meter The peculiar series of water measures for two sensor IDs are yet to be explained by Braila.\n",
     "\n",
-    "“Tot1”: is the water flow in m3\n",
+    "`“Tot1”`: is the water flow in m3\n",
     "\n",
-    "“Tot2”: is the water flow in m3. The difference between Tot1 and Tot2 are yet to be explained by Braila.\n",
+    "`“Tot2”`: is the water flow in m3. The difference between Tot1 and Tot2 are yet to be explained by Braila.\n",
     "\n",
-    "“Analog2”: is the water pressure of the measure point. The unit is probably Pascal, however not yet confirmed by Braila."
+    "`“Analog2”`: is the water pressure of the measure point. The unit is probably Pascal, however not yet confirmed by Braila."
    ]
   },
   {
@@ -38,6 +38,8 @@
     "import math\n",
     "import pandas as pandas\n",
     "import numpy as np\n",
+    "import matplotlib\n",
+    "matplotlib.use('Agg')\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -50,7 +52,18 @@
     "data = pandas.read_json(\"../data/water_loss_data_set_1.json\")\n",
     "\n",
     "# removing false values\n",
-    "data = data[(data.timeStamp != \"0000-00-00 00:00:00\" ) & (data.timeStamp != \"2000-01-01 00:00:00\")]"
+    "data = data[(data.timeStamp != \"0000-00-00 00:00:00\" ) & (data.timeStamp != \"2000-01-01 00:00:00\")]\n",
+    "\n",
+    "\"\"\"\n",
+    "Missing data in columns: \n",
+    "tot1: 5086 \n",
+    "tot2: 100635 \n",
+    "analog2: 25\n",
+    "\n",
+    "Removing data which is zero, be careful for 'analog2' only 25 values have zero. \n",
+    "This could be values when some work was done on the pipes so the unhooked them -> pressure 0 ?\n",
+    "\"\"\" \n",
+    "data = data[(data.tot1 != 0 ) & (data.analog2 != 0)]"
    ]
   },
   {
@@ -90,122 +103,105 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>timeStamp</th>\n",
-       "      <th>idflowmeter</th>\n",
        "      <th>tot1</th>\n",
        "      <th>tot2</th>\n",
        "      <th>analog2</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>timeStamp</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2018-11-23 07:03:00</td>\n",
-       "      <td>MAG8000_024905H318</td>\n",
+       "      <th>2018-11-23 08:00:00</th>\n",
+       "      <td>1.410000</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>1.110000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2018-11-23 07:04:00</td>\n",
-       "      <td>MAG8000_024905H318</td>\n",
+       "      <th>2018-11-23 09:00:00</th>\n",
+       "      <td>30.987273</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>1.103409</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2018-11-23 07:06:00</td>\n",
-       "      <td>MAG8000_024905H318</td>\n",
+       "      <th>2018-11-23 10:00:00</th>\n",
+       "      <td>87.809457</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>1.099022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2018-11-23 07:09:00</td>\n",
-       "      <td>MAG8000_024905H318</td>\n",
+       "      <th>2018-11-23 11:00:00</th>\n",
+       "      <td>182.008000</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>1.101000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2018-11-23 07:10:00</td>\n",
-       "      <td>MAG8000_024905H318</td>\n",
+       "      <th>2018-11-23 12:00:00</th>\n",
+       "      <td>278.252500</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.960333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1395740</th>\n",
-       "      <td>2020-04-01 14:05:00</td>\n",
-       "      <td>MAG8000_024805H318</td>\n",
-       "      <td>977428.25</td>\n",
+       "      <th>2020-04-01 10:00:00</th>\n",
+       "      <td>977299.898333</td>\n",
        "      <td>-4713.21</td>\n",
-       "      <td>1.54</td>\n",
+       "      <td>1.527333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1395741</th>\n",
-       "      <td>2020-04-01 14:06:00</td>\n",
-       "      <td>MAG8000_024805H318</td>\n",
-       "      <td>977428.88</td>\n",
+       "      <th>2020-04-01 11:00:00</th>\n",
+       "      <td>977333.727167</td>\n",
        "      <td>-4713.21</td>\n",
-       "      <td>1.54</td>\n",
+       "      <td>1.528500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1395742</th>\n",
-       "      <td>2020-04-01 14:07:00</td>\n",
-       "      <td>MAG8000_024805H318</td>\n",
-       "      <td>977429.50</td>\n",
+       "      <th>2020-04-01 12:00:00</th>\n",
+       "      <td>977369.184833</td>\n",
        "      <td>-4713.21</td>\n",
-       "      <td>1.54</td>\n",
+       "      <td>1.530500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1395743</th>\n",
-       "      <td>2020-04-01 14:08:00</td>\n",
-       "      <td>MAG8000_024805H318</td>\n",
-       "      <td>977430.12</td>\n",
+       "      <th>2020-04-01 13:00:00</th>\n",
+       "      <td>977406.266500</td>\n",
        "      <td>-4713.21</td>\n",
-       "      <td>1.54</td>\n",
+       "      <td>1.539333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1395744</th>\n",
-       "      <td>2020-04-01 14:09:00</td>\n",
-       "      <td>MAG8000_024805H318</td>\n",
-       "      <td>977430.75</td>\n",
+       "      <th>2020-04-01 14:00:00</th>\n",
+       "      <td>977427.937000</td>\n",
        "      <td>-4713.21</td>\n",
-       "      <td>1.53</td>\n",
+       "      <td>1.539000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1395740 rows × 5 columns</p>\n",
+       "<p>11863 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   timeStamp         idflowmeter       tot1     tot2  analog2\n",
-       "0        2018-11-23 07:03:00  MAG8000_024905H318       0.00     0.00     0.00\n",
-       "1        2018-11-23 07:04:00  MAG8000_024905H318       0.00     0.00     0.00\n",
-       "2        2018-11-23 07:06:00  MAG8000_024905H318       0.00     0.00     0.00\n",
-       "3        2018-11-23 07:09:00  MAG8000_024905H318       0.00     0.00     0.00\n",
-       "4        2018-11-23 07:10:00  MAG8000_024905H318       0.00     0.00     0.00\n",
-       "...                      ...                 ...        ...      ...      ...\n",
-       "1395740  2020-04-01 14:05:00  MAG8000_024805H318  977428.25 -4713.21     1.54\n",
-       "1395741  2020-04-01 14:06:00  MAG8000_024805H318  977428.88 -4713.21     1.54\n",
-       "1395742  2020-04-01 14:07:00  MAG8000_024805H318  977429.50 -4713.21     1.54\n",
-       "1395743  2020-04-01 14:08:00  MAG8000_024805H318  977430.12 -4713.21     1.54\n",
-       "1395744  2020-04-01 14:09:00  MAG8000_024805H318  977430.75 -4713.21     1.53\n",
+       "                              tot1     tot2   analog2\n",
+       "timeStamp                                            \n",
+       "2018-11-23 08:00:00       1.410000     0.00  1.110000\n",
+       "2018-11-23 09:00:00      30.987273     0.00  1.103409\n",
+       "2018-11-23 10:00:00      87.809457     0.00  1.099022\n",
+       "2018-11-23 11:00:00     182.008000     0.00  1.101000\n",
+       "2018-11-23 12:00:00     278.252500     0.00  0.960333\n",
+       "...                            ...      ...       ...\n",
+       "2020-04-01 10:00:00  977299.898333 -4713.21  1.527333\n",
+       "2020-04-01 11:00:00  977333.727167 -4713.21  1.528500\n",
+       "2020-04-01 12:00:00  977369.184833 -4713.21  1.530500\n",
+       "2020-04-01 13:00:00  977406.266500 -4713.21  1.539333\n",
+       "2020-04-01 14:00:00  977427.937000 -4713.21  1.539000\n",
        "\n",
-       "[1395740 rows x 5 columns]"
+       "[11863 rows x 3 columns]"
       ]
      },
      "execution_count": 3,
@@ -214,12 +210,17 @@
     }
    ],
    "source": [
-    "data"
+    "data[\"timeStamp\"] =  pandas.to_datetime(data[\"timeStamp\"], format=\"%Y-%m-%d %H:%M:%S\")\n",
+    "\n",
+    "# flooring to the nearest hour and grouping by hour\n",
+    "data[\"timeStamp\"] = data[\"timeStamp\"].dt.floor('h')\n",
+    "data_by_hour = data.groupby(\"timeStamp\").mean()\n",
+    "data_by_hour"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -227,31 +228,26 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "time :\n",
-      " ['2018-11-23 07:03:00', '2018-11-23 07:04:00', '2018-11-23 07:06:00', '2018-11-23 07:09:00', '2018-11-23 07:10:00', '2018-11-23 07:11:00', '2018-11-23 07:12:00', '2018-11-23 07:13:00', '2018-11-23 07:14:00', '2018-11-23 07:15:00'] \n",
-      "tot1 :\n",
-      " [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "\n",
-      "Max date: 2020-04-01 14:09:00 \n",
-      "Min date: 2018-11-23 07:03:00 \n",
-      "Median date: 2019-08-02 02:28:00\n"
+      "Max date: 2020-04-01 14:00:00 \n",
+      "Min date: 2018-11-23 08:00:00 \n",
+      "Median date: 2019-07-29 12:00:00\n",
+      "11863 11863\n"
      ]
     }
    ],
    "source": [
-    "test_data = data[[\"timeStamp\",\"tot1\"]]\n",
-    "test_array = test_data.to_numpy()\n",
-    "# sorting by time stamp\n",
-    "test_array = np.sort(test_array, axis=0)\n",
+    "timestamp = data_by_hour.index.tolist()\n",
+    "timestamp = [str(i) for i in timestamp]\n",
     "\n",
-    "timestamp = [i[0] for i in test_array]\n",
-    "tot1 = [i[1] for i in test_array]\n",
-    "print(\"\\ntime :\\n\", timestamp[:10], \"\\ntot1 :\\n\", tot1[:10])\n",
+    "#tot1 = data_by_hour[[\"tot1\"]].to_numpy()\n",
+    "x_axis_data = data_by_hour[[\"analog2\"]].to_numpy()\n",
     "print(\"\")\n",
     "print(\"Max date:\", max(timestamp), \"\\nMin date:\", min(timestamp), \"\\nMedian date:\", timestamp[round(len(timestamp)/2)])\n",
+    "\n",
     "#print(\"\\n\\nMax date:\", timestamp[len(timestamp)-1], \"\\nMin date:\", timestamp[0], \"\\nMedian date:\", \n",
     "#      timestamp[round(len(timestamp)/2)])\n",
-    "#print(\"\\n\\nFalse values: \", test_array[:10])"
+    "#print(\"\\n\\nFalse values: \", test_array[:10])\n",
+    "print(len(timestamp), len(analog2))"
    ]
   },
   {
@@ -259,21 +255,20 @@
    "metadata": {},
    "source": [
     "time :  \n",
-    " ['0000-00-00 00:00:00', '2000-01-01 00:00:00', '2000-01-01 00:00:00', '2000-01-01 00:00:00', '2000-01-01 00:00:00', '2018-11-23 07:03:00', '2018-11-23 07:04:00', '2018-11-23 07:06:00', '2018-11-23 07:09:00', '2018-11-23 07:10:00'] \n",
+    "`['0000-00-00 00:00:00', '2000-01-01 00:00:00', '2000-01-01 00:00:00', '2000-01-01 00:00:00', '2000-01-01 00:00:00', '2018-11-23 07:03:00', '2018-11-23 07:04:00', '2018-11-23 07:06:00', '2018-11-23 07:09:00', '2018-11-23 07:10:00']`\n",
     "tot1 :  \n",
-    " [-1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+    "`[-1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]`\n",
     "\n",
-    "Max date: 2020-04-01 14:09:00   \n",
-    "Min date: 0000-00-00 00:00:00 \n",
-    "Median date: 2019-08-02 02:27:00  \n",
+    "Max date: `2020-04-01 14:09:00`  \n",
+    "Min date: `0000-00-00 00:00:00` \n",
+    "Median date: `2019-08-02 02:27:00` \n",
+    "\n",
+    "Max date: `2020-04-01 14:09:00` \n",
+    "Min date: `0000-00-00 00:00:00` \n",
+    "Median date: `2019-08-02 02:27:00`\n",
     "\n",
     "\n",
-    "Max date: 2020-04-01 14:09:00 \n",
-    "Min date: 0000-00-00 00:00:00 \n",
-    "Median date: 2019-08-02 02:27:00\n",
-    "\n",
-    "\n",
-    "False values:  [['0000-00-00 00:00:00' -1.0]\n",
+    "False values:  `[['0000-00-00 00:00:00' -1.0]\n",
     " ['2000-01-01 00:00:00' 0.0]\n",
     " ['2000-01-01 00:00:00' 0.0]\n",
     " ['2000-01-01 00:00:00' 0.0]\n",
@@ -282,33 +277,58 @@
     " ['2018-11-23 07:04:00' 0.0]\n",
     " ['2018-11-23 07:06:00' 0.0]\n",
     " ['2018-11-23 07:09:00' 0.0]\n",
-    " ['2018-11-23 07:10:00' 0.0]]"
+    " ['2018-11-23 07:10:00' 0.0]]`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Checking which data is missing.   \n",
+    "\"tot2\" attribute contains negative values mostly negative values!! Other do not..."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"fig = plt.figure(figsize=(12, 8), dpi= 100, facecolor='w')\n",
-    "plt.plot(timestamp, tot1)\n",
-    "#plt.ylabel('Število ogledov/ocen')\n",
-    "# plt.xlabel('Povprečna ocena')\n",
+    "\"\"\"\n",
+    "DATA_SIZE = 1390649 \n",
+    "len_tot1 = len(data[(data['tot1'] != 0)])\n",
+    "len_tot2 = len(data[(data['tot2'] != 0)])\n",
+    "len_analog = len(data[(data['analog2'] != 0)])\n",
+    "\n",
+    "print(\"Missing data in columns: \")\n",
+    "print(\"tot1:\", (DATA_SIZE - len_tot1), \"\\ntot2:\", (DATA_SIZE - len_tot2), \"\\nanalog2:\", (DATA_SIZE- len_analog))\n",
+    "\"\"\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NUM_OF_DATA_TO_PLOT = 10000\n",
+    "\n",
+    "fig = plt.figure(figsize=(18, 12), dpi= 100, facecolor='w')\n",
+    "plt.plot(timestamp, x_axis_data)\n",
+    "\n",
+    "plt.ylabel('Pressure in bar ?')\n",
+    "plt.xlabel('Date')\n",
+    "plt.xticks([i for i in range(0,len(x_axis_data), 1000)])\n",
+    "plt.rc('xtick',labelsize=8)\n",
+    "\"\"\"\n",
+    "\n",
+    "plt.xticks([i for count, i in enumerate(timestamp[:NUM_OF_DATA_TO_PLOT]) if count % 150 == 0])\n",
+    "plt.rc('xtick',labelsize=5)\n",
+    "\"\"\"\n",
+    "\n",
     "plt.title('Time')\n",
-    "plt.show()\"\"\";"
+    "plt.savefig('test.png')\n",
+    "# plt.show()"
    ]
   },
   {
