--- a/notebooks/Result presentation.ipynb
+++ b/notebooks/Result presentation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Presentation of gathered results"
+    "# Presentation of gathered results\n"
    ]
   },
   {
