Normalized data, trying out Lasso and Ridge

--- a/notebooks/Intial data analysis.ipynb
+++ b/notebooks/Intial data analysis.ipynb
@@ -624,9 +624,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.11      ],\n",
+       "       [1.10340909],\n",
+       "       [1.09902174],\n",
+       "       ...,\n",
+       "       [1.5305    ],\n",
+       "       [1.53933333],\n",
+       "       [1.539     ]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "timestamp_data_249 = data_249_by_hour.index.tolist()\n",
     "timestamp_data_249 = [str(i) for i in timestamp_data_249]\n",
@@ -636,7 +653,8 @@
     "\n",
     "y_axis_data = data.groupby(\"timeStamp\").mean()[[\"analog2\"]].to_numpy()\n",
     "y_axis_data_249 = data_249_by_hour[[\"analog2\"]].to_numpy()\n",
-    "y_axis_data_248 = data_248_by_hour[[\"analog2\"]].to_numpy()"
+    "y_axis_data_248 = data_248_by_hour[[\"analog2\"]].to_numpy()\n",
+    "y_axis_data"
    ]
   },
   {
@@ -1071,7 +1089,6 @@
     "\n",
     "data_minutes_249 = data_minutes_249.groupby(\"timeStamp\").mean()\n",
     "data_minutes_248 = data_minutes_248.groupby(\"timeStamp\").mean()\n",
-    "data_minutes_248\n",
     "\n",
     "# Saving data to process in another notebook\n",
     "data_minutes_248.to_json(\"../data/device_id_248.json\")\n",
