Started clustering, trying to find the best way to cluster all data and split the data in the most logical groups

--- a/notebooks/Predicting pressure and finding anomalies.ipynb
+++ b/notebooks/Predicting pressure and finding anomalies.ipynb
@@ -689,6 +689,7 @@
     "    data.index = pandas.to_datetime(data.index)\n",
     "    matrix_X = data.reset_index().values\n",
     "\n",
+    "    # shuffle(matrix_X) # so that the sets are randomly selected\n",
     "    size_of_learn_set = round(len(matrix_X) * 0.70)\n",
     "    \n",
     "    # Dividing data on the test and learn set\n",
@@ -760,11 +761,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Polinomial regression\n",
-    "Since \"tot1\" seems to be correlated with \"analog2\" for device 248 and the results of linear regression are not good i will try to use polinomial regression to get a good fit."
+    "## Lasso, ridge \n",
+    "Since \"tot1\" seems to be correlated with \"analog2\" for device 248 and the results of linear regression are not good i will try to use different regression models to get a good fit."
    ]
   },
   {
@@ -884,20 +892,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(None, None)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dtaidistance import dtw\n",
     "from dtaidistance import dtw_visualisation as dtwvis\n",
@@ -907,6 +904,37 @@
     "path = dtw.warping_path(s1, s2)\n",
     "# dtwvis.plot_warping(s1, s2, path, filename=\"warp.png\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def DTWDistance(s1, s2,w):\n",
+    "    DTW={}\n",
+    "\n",
+    "    w = max(w, abs(len(s1)-len(s2)))\n",
+    "\n",
+    "    for i in range(-1,len(s1)):\n",
+    "        for j in range(-1,len(s2)):\n",
+    "            DTW[(i, j)] = float('inf')\n",
+    "    DTW[(-1, -1)] = 0\n",
+    "\n",
+    "    for i in range(len(s1)):\n",
+    "        for j in range(max(0, i-w), min(len(s2), i+w)):\n",
+    "            dist= (s1[i]-s2[j])**2\n",
+    "            DTW[(i, j)] = dist + min(DTW[(i-1, j)],DTW[(i, j-1)], DTW[(i-1, j-1)])\n",
+    "\n",
+    "    return sqrt(DTW[len(s1)-1, len(s2)-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
