--- a/notebooks/Hierarhical_Clustering_General_Anomaly_Finding.ipynb
+++ b/notebooks/Hierarhical_Clustering_General_Anomaly_Finding.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,6 +466,8 @@
     "    size_arr = generate_sizes(class_dict)\n",
     "\n",
     "    fig = plt.figure(figsize=(18, 12), dpi= 100, facecolor='w')\n",
+    "    print(matrix[:, 0])\n",
+    "    print(matrix_X)\n",
     "    plt.plot(matrix[:, 0], matrix_X, color=\"blue\")\n",
     "    \n",
     "    for num, element in enumerate(class_dict):\n",
@@ -486,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +500,7 @@
     "    # print(matrix[:2])\n",
     "    if len(matrix) < 1:\n",
     "        raise Exception(\"No data for this date \") \n",
-    "    matrix_X = matrix[:, 3:]        \n",
+    "    matrix_X = matrix[:, 3:] \n",
     "    \n",
     "    L = sch.linkage(matrix_X, method=\"complete\", metric=\"cityblock\")\n",
     "    \n",
@@ -524,14 +526,14 @@
     "            class_dict[predicted_class] = [(index, value)]\n",
     "        else:\n",
     "            class_dict[predicted_class].append((index, value))\n",
-    "     \n",
+    "\n",
     "    predicting_anomalies(L, class_dict)\n",
     "    draw_classes(matrix, matrix_X, class_dict, start, end)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -541,7 +543,199 @@
      "output_type": "stream",
      "text": [
       "The best value for t is t = 0.0125\n",
-      "{5: 0.0313}\n"
+      "{5: 0.0313}\n",
+      "['2019-04-12 13:00' '2019-04-12 14:00' '2019-04-12 15:00'\n",
+      " '2019-04-12 16:00' '2019-04-12 17:00' '2019-04-12 18:00'\n",
+      " '2019-04-12 19:00' '2019-04-12 20:00' '2019-04-12 21:00'\n",
+      " '2019-04-12 22:00' '2019-04-12 23:00' '2019-04-13 00:00'\n",
+      " '2019-04-13 01:00' '2019-04-13 02:00' '2019-04-13 03:00'\n",
+      " '2019-04-13 04:00' '2019-04-13 05:00' '2019-04-13 06:00'\n",
+      " '2019-04-13 07:00' '2019-04-13 08:00' '2019-04-13 09:00'\n",
+      " '2019-04-13 10:00' '2019-04-13 11:00' '2019-04-13 12:00'\n",
+      " '2019-04-13 13:00' '2019-04-13 14:00' '2019-04-13 15:00'\n",
+      " '2019-04-13 16:00' '2019-04-13 17:00' '2019-04-13 18:00'\n",
+      " '2019-04-13 19:00' '2019-04-13 20:00' '2019-04-13 21:00'\n",
+      " '2019-04-13 22:00' '2019-04-13 23:00' '2019-04-14 00:00'\n",
+      " '2019-04-14 01:00' '2019-04-14 02:00' '2019-04-14 03:00'\n",
+      " '2019-04-14 04:00' '2019-04-14 05:00' '2019-04-14 06:00'\n",
+      " '2019-04-14 07:00' '2019-04-14 08:00' '2019-04-14 09:00'\n",
+      " '2019-04-14 10:00' '2019-04-14 11:00' '2019-04-14 12:00'\n",
+      " '2019-04-14 13:00' '2019-04-14 14:00' '2019-04-14 15:00'\n",
+      " '2019-04-14 16:00' '2019-04-14 17:00' '2019-04-14 18:00'\n",
+      " '2019-04-14 19:00' '2019-04-14 20:00' '2019-04-14 21:00'\n",
+      " '2019-04-14 22:00' '2019-04-14 23:00' '2019-04-15 00:00'\n",
+      " '2019-04-15 01:00' '2019-04-15 02:00' '2019-04-15 03:00'\n",
+      " '2019-04-15 04:00' '2019-04-15 05:00' '2019-04-15 06:00'\n",
+      " '2019-04-15 07:00' '2019-04-15 08:00' '2019-04-15 09:00'\n",
+      " '2019-04-15 10:00' '2019-04-15 11:00' '2019-04-15 12:00'\n",
+      " '2019-04-15 13:00' '2019-04-15 14:00' '2019-04-15 15:00'\n",
+      " '2019-04-15 16:00' '2019-04-15 17:00' '2019-04-15 18:00'\n",
+      " '2019-04-15 19:00' '2019-04-15 20:00' '2019-04-15 21:00'\n",
+      " '2019-04-15 22:00' '2019-04-15 23:00' '2019-04-16 00:00'\n",
+      " '2019-04-16 01:00' '2019-04-16 02:00' '2019-04-16 03:00'\n",
+      " '2019-04-16 04:00' '2019-04-16 05:00' '2019-04-16 06:00'\n",
+      " '2019-04-16 07:00' '2019-04-16 08:00' '2019-04-16 09:00'\n",
+      " '2019-04-16 10:00' '2019-04-16 11:00' '2019-04-16 12:00'\n",
+      " '2019-04-16 13:00' '2019-04-16 14:00' '2019-04-16 15:00'\n",
+      " '2019-04-16 16:00' '2019-04-16 17:00' '2019-04-16 18:00'\n",
+      " '2019-04-16 19:00' '2019-04-16 20:00' '2019-04-16 21:00'\n",
+      " '2019-04-16 22:00' '2019-04-16 23:00' '2019-04-17 00:00'\n",
+      " '2019-04-17 01:00' '2019-04-17 02:00' '2019-04-17 03:00'\n",
+      " '2019-04-17 04:00' '2019-04-17 05:00' '2019-04-17 06:00'\n",
+      " '2019-04-17 07:00' '2019-04-17 08:00' '2019-04-17 09:00'\n",
+      " '2019-04-17 10:00' '2019-04-17 11:00' '2019-04-17 12:00'\n",
+      " '2019-04-17 13:00' '2019-04-17 14:00' '2019-04-17 15:00'\n",
+      " '2019-04-17 16:00' '2019-04-17 17:00' '2019-04-17 18:00'\n",
+      " '2019-04-17 19:00' '2019-04-17 20:00' '2019-04-17 21:00'\n",
+      " '2019-04-17 22:00' '2019-04-17 23:00' '2019-04-18 00:00'\n",
+      " '2019-04-18 01:00' '2019-04-18 02:00' '2019-04-18 03:00'\n",
+      " '2019-04-18 04:00' '2019-04-18 05:00' '2019-04-18 06:00'\n",
+      " '2019-04-18 07:00' '2019-04-18 08:00' '2019-04-18 09:00'\n",
+      " '2019-04-18 10:00' '2019-04-18 11:00' '2019-04-18 12:00']\n",
+      "[[0.8028333333333327]\n",
+      " [0.8024999999999995]\n",
+      " [0.8004999999999999]\n",
+      " [0.799666666666666]\n",
+      " [0.8038333333333333]\n",
+      " [0.8071666666666666]\n",
+      " [0.8120000000000004]\n",
+      " [0.7636666666666675]\n",
+      " [0.7686666666666676]\n",
+      " [0.7665000000000007]\n",
+      " [0.7691666666666673]\n",
+      " [0.7700000000000008]\n",
+      " [0.7669999999999996]\n",
+      " [0.8150000000000006]\n",
+      " [0.8053333333333322]\n",
+      " [0.8011666666666659]\n",
+      " [0.7993333333333329]\n",
+      " [0.7993333333333329]\n",
+      " [0.7996666666666662]\n",
+      " [0.8029999999999997]\n",
+      " [0.802166666666666]\n",
+      " [0.8038333333333341]\n",
+      " [0.8071666666666665]\n",
+      " [0.8078333333333335]\n",
+      " [0.8078333333333334]\n",
+      " [0.8044999999999994]\n",
+      " [0.8014999999999997]\n",
+      " [0.7994999999999994]\n",
+      " [0.8001666666666659]\n",
+      " [0.809666666666667]\n",
+      " [0.8128333333333335]\n",
+      " [0.7633333333333341]\n",
+      " [0.7696666666666674]\n",
+      " [0.769833333333334]\n",
+      " [0.7700000000000008]\n",
+      " [0.7698333333333341]\n",
+      " [0.7659999999999996]\n",
+      " [0.8151666666666667]\n",
+      " [0.8076666666666662]\n",
+      " [0.8008333333333327]\n",
+      " [0.7998333333333327]\n",
+      " [0.8044999999999999]\n",
+      " [0.8108333333333336]\n",
+      " [0.8100000000000005]\n",
+      " [0.8086666666666669]\n",
+      " [0.8098333333333337]\n",
+      " [0.8120000000000005]\n",
+      " [0.8111666666666669]\n",
+      " [0.803999999999999]\n",
+      " [0.8086666666666666]\n",
+      " [0.8019999999999996]\n",
+      " [0.799666666666666]\n",
+      " [0.8040000000000004]\n",
+      " [0.8118333333333332]\n",
+      " [0.8136666666666671]\n",
+      " [0.7648333333333331]\n",
+      " [0.7643333333333335]\n",
+      " [0.7611666666666665]\n",
+      " [0.7606666666666665]\n",
+      " [0.7599999999999999]\n",
+      " [0.7580000000000002]\n",
+      " [0.8033333333333323]\n",
+      " [0.7993333333333328]\n",
+      " [0.7993333333333328]\n",
+      " [0.7988333333333327]\n",
+      " [0.8080000000000003]\n",
+      " [0.8076666666666661]\n",
+      " [0.8091666666666673]\n",
+      " [0.8098333333333336]\n",
+      " [0.811666666666667]\n",
+      " [0.8105000000000004]\n",
+      " [0.8093333333333335]\n",
+      " [0.8095000000000001]\n",
+      " [0.8048333333333331]\n",
+      " [0.8030000000000004]\n",
+      " [0.8031666666666658]\n",
+      " [0.8066666666666664]\n",
+      " [0.8101666666666669]\n",
+      " [0.8148333333333336]\n",
+      " [0.7553333333333334]\n",
+      " [0.7608333333333336]\n",
+      " [0.7656666666666673]\n",
+      " [0.7601666666666667]\n",
+      " [0.7620000000000001]\n",
+      " [0.7603333333333333]\n",
+      " [0.8086666666666666]\n",
+      " [0.800166666666666]\n",
+      " [0.7998333333333327]\n",
+      " [0.8020000000000003]\n",
+      " [0.8066666666666674]\n",
+      " [0.8095000000000004]\n",
+      " [0.8056666666666666]\n",
+      " [0.8036666666666668]\n",
+      " [0.8088333333333337]\n",
+      " [0.8110000000000005]\n",
+      " [0.8106666666666672]\n",
+      " [0.8108333333333336]\n",
+      " [0.8069999999999997]\n",
+      " [0.8016666666666661]\n",
+      " [0.7999999999999995]\n",
+      " [0.8083333333333336]\n",
+      " [0.8091666666666671]\n",
+      " [0.811833333333334]\n",
+      " [0.7681666666666662]\n",
+      " [0.7591666666666668]\n",
+      " [0.7615]\n",
+      " [0.7633333333333331]\n",
+      " [0.7609999999999998]\n",
+      " [0.7590000000000001]\n",
+      " [0.8040000000000005]\n",
+      " [0.800166666666666]\n",
+      " [0.8053333333333337]\n",
+      " [0.8076666666666665]\n",
+      " [0.808]\n",
+      " [0.809333333333333]\n",
+      " [0.8115000000000004]\n",
+      " [0.7991666666666665]\n",
+      " [0.7843333333333332]\n",
+      " [0.7948333333333334]\n",
+      " [0.8070000000000004]\n",
+      " [0.8079999999999998]\n",
+      " [0.804]\n",
+      " [0.8008333333333327]\n",
+      " [0.7998333333333326]\n",
+      " [0.8039999999999999]\n",
+      " [0.8071666666666667]\n",
+      " [0.8168333333333337]\n",
+      " [0.7673333333333338]\n",
+      " [0.761666666666667]\n",
+      " [0.7693103448275869]\n",
+      " [0.7668333333333343]\n",
+      " [0.7691666666666672]\n",
+      " [0.7606666666666666]\n",
+      " [0.8128333333333341]\n",
+      " [0.801166666666666]\n",
+      " [0.7998333333333328]\n",
+      " [0.8008333333333328]\n",
+      " [0.8003333333333327]\n",
+      " [0.8021666666666664]\n",
+      " [0.8095000000000003]\n",
+      " [0.8080000000000004]\n",
+      " [0.8110000000000003]\n",
+      " [0.8141666666666671]\n",
+      " [0.811166666666667]]\n"
      ]
     },
     {
