--- a/notebooks/Clustering.ipynb
+++ b/notebooks/Clustering.ipynb
@@ -348,12 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clustering pressure data \n",
-    "**TODO**\n",
-    "1. Pridobi razrede\n",
-    "2. Ugotovi kje so krticicna stanje\n",
-    "3. Naredi da lohk zberes timeframe in zrise več grafov\n",
-    "**"
+    "## Clustering pressure data "
    ]
   },
   {
