--- a/notebooks/Predicting pressure and finding anomalies.ipynb
+++ b/notebooks/Predicting pressure and finding anomalies.ipynb
@@ -650,15 +650,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def draw_given_and_predicted(given, predicted):\n",
     "    # takes in two arrays - 1. the actual data 2. predicted data\n",
     "    fig = plt.figure(figsize=(12, 6), dpi= 100, facecolor='w')\n",
-    "    plt.plot(given, color=\"blue\", label=\"Actual values\")\n",
-    "    plt.plot(predicted, color=\"red\", label=\"Predicted values\")\n",
+    "    plt.plot([i for i in range(len(given))], given, color=\"blue\", label=\"Actual values\")\n",
+    "    plt.plot([i for i in range(len(predicted))], predicted, color=\"red\", label=\"Predicted values\")\n",
     "    plt.legend(loc=\"upper left\")\n",
     "    plt.margins(0, 0.1)\n",
     "    plt.xticks([])\n",
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -931,10 +931,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# make a good linear and polinomial regression model"
+   ]
   },
   {
    "cell_type": "code",
