--- a/notebooks/Result presentation.ipynb
+++ b/notebooks/Result presentation.ipynb
@@ -12,21 +12,86 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import plotly.express as px\n",
+    "import math\n",
+    "import pandas as pandas\n",
+    "from pandas import concat\n",
+    "import numpy as np\n",
+    "from scipy.stats import pearsonr\n",
+    "from statistics import mean\n",
+    "from numpy.random import shuffle\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression, Lasso, Ridge\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split \n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.metrics import r2_score\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "data = pandas.read_json(\"../data/water_loss_data_set_1.json\")\n",
+    "data = data[(data.timeStamp != \"0000-00-00 00:00:00\" ) & (data.timeStamp != \"2000-01-01 00:00:00\")]\n",
+    "data = data[(data.tot1 != 0 ) & (data.analog2 != 0)]\n",
+    "data[\"timeStamp\"] = pandas.to_datetime(data[\"timeStamp\"], format=\"%Y-%m-%d %H:%M\")\n",
+    "\n",
+    "data_with_minutes = data.copy(deep=True)\n",
+    "data_249_min = data[data['idflowmeter'] == \"MAG8000_024905H318\"]\n",
+    "data_248_min = data[data['idflowmeter'] == \"MAG8000_024805H318\"]\n",
+    "\n",
+    "def data_sel_time(start, end, data_fun):\n",
+    "    return data_fun.loc[(data_fun[\"timeStamp\"] >= start) & (data_fun[\"timeStamp\"] <= end)]   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overview of all data with an option to zoom on specific part \n",
+    "\n",
+    "List of dates where an anomaly occurs:\n",
+    "- 24.1.2019 7.27\n",
+    "- 25.1.2019 6.25"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# anomaly_rows_248 = data_248_min.loc[(data_248_min['analog2'] <= 0.72)]\n",
+    "data_249_processed = data_sel_time(\"2018-11-28 08:00:00\", \"2020-06-26 08:00:00\", data_249_min)\n",
+    "anomaly_rows_249 = data_249_processed.loc[(data_249_processed['analog2'] <= 0.72)]\n",
+    "dates_249 = anomaly_rows_249[\"timeStamp\"].map(pandas.Timestamp.date).unique()\n",
+    "dates_249 = [i.strftime(\"%d-%m-%Y\") for i in dates_249]\n",
+    "\n",
+    "dates_249"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "df = data_sel_time(\"2019-01-08 08:00:00\", \"2019-06-26 08:00:00\", data_249_min)\n",
+    "x = df[\"timeStamp\"].values\n",
+    "y = df[\"analog2\"].values\n",
+    "\n",
+    "fig = px.line(df, x=\"timeStamp\", y=\"analog2\", width=1000, height=600)\n",
+    "fig.show()\n",
+    "\n",
+    "\n",
+    "\"\"\"fig = go.Figure()\n",
+    "fig.add_trace(go.Scatter(x=x, y=y,\n",
+    "                    mode='lines+markers',\n",
+    "                    name='lines+markers'))\n",
+    "\n",
+    "fig.show()\"\"\";"
+   ]
   },
   {
    "cell_type": "code",
