--- a/notebooks/regression/Anomaly detector .ipynb
+++ b/notebooks/regression/Anomaly detector .ipynb
@@ -1019,40 +1019,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-12-13776384f703>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-12-13776384f703>\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    \"\"\"\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"print(data_248_15_avg.isna().any())\n",
     "\n",
     "with pandas.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can be specified also\n",
-    "    print(data_248_15_avg[data_248_15_avg.isna().any(axis=1)])\"\"\";\n",
+    "    print(data_248_15_avg[data_248_15_avg.isna().any(axis=1)])\n",
+    "    \n",
+    "x_ = PolynomialFeatures(degree=2, include_bias=True).fit_transform(X_train)\n",
+    "x_test = PolynomialFeatures(degree=2, include_bias=True).fit_transform(X_test)\n",
     "\n",
-    "    \"\"\"      \n",
-    "    x_ = PolynomialFeatures(degree=2, include_bias=True).fit_transform(X_train)\n",
-    "    x_test = PolynomialFeatures(degree=2, include_bias=True).fit_transform(X_test)\n",
+    "model = LinearRegression(fit_intercept=False).fit(x_, y_train)\n",
+    "y_pred = model.predict(x_test)\n",
     "\n",
-    "    model = LinearRegression(fit_intercept=False).fit(x_, y_train)\n",
-    "    y_pred = model.predict(x_test)\n",
-    "    \n",
-    "    model = Ridge().fit(X_train, y_train)\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    \n",
-    "    diff = mean_squared_error(y_test, y_pred_rf)\n",
-    "    print(\"MSE result:\", diff)\n",
-    "    \n",
-    "    coefficient_of_dermination = r2_score(y_test, y_pred)\n",
-    "    print(\"R2 score: \", coefficient_of_dermination)\n",
-    "    \"\"\""
+    "model = Ridge().fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "diff = mean_squared_error(y_test, y_pred_rf)\n",
+    "print(\"MSE result:\", diff)\n",
+    "\n",
+    "coefficient_of_dermination = r2_score(y_test, y_pred)\n",
+    "print(\"R2 score: \", coefficient_of_dermination)\n",
+    "\"\"\";"
    ]
   },
   {
