Created a class for reading data for alicante and for braila...

--- a/notebooks/attribute_building/Data_builder.ipynb
+++ b/notebooks/attribute_building/Data_builder.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Attribute-feature building\n",
+    "## Attribute-feature building - if you remove tot1 values which are zero you get a wrong scale which doesnt detect anomalies as it should so 0 have to be removed or handled in another way\n",
     "Here I will construct an optimal data presentation to be better suited for further proceessing.   \n",
     "- There will be new time attributes - minute,hour,day,month,year\n",
     "- I will also remove some incomplete data\n",
@@ -36,7 +36,15 @@
     "from sklearn.metrics import r2_score\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "data = pandas.read_json(\"../../data/water_loss_data_set_1.json\")\n",
+    "data = pandas.read_json(\"../../data/water_loss_data_set_1.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data = data[(data.timeStamp != \"0000-00-00 00:00:00\" ) & (data.timeStamp != \"2000-01-01 00:00:00\")]\n",
     "data = data[(data.tot1 != 0 ) & (data.analog2 != 0)]\n",
     "data[\"timeStamp\"] = pandas.to_datetime(data[\"timeStamp\"], format=\"%Y-%m-%d %H:%M\")\n",
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +193,7 @@
        "[705858 rows x 3 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +423,7 @@
        "[705858 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +682,7 @@
        "[705857 rows x 10 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,12 +703,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Graphs have to be commented out/or output cleared because otherwise the files are over 50MB"
+    "Graphs have to be commented out/or output cleared because otherwise the files are over 50MB. The spikes seem to have a pattern they usually apear around 32- 38 minute in an hour and on average last around 4hours. This was seen from the graph and is not a product of calculation so it may not be true."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -709,15 +717,72 @@
        "'fig = px.line(data_249_final, x=data_249_final.index, y=\"tot1 change\", height=600)\\nfig.show()'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "data_temp = data_249_final[(data_249_final[\"tot2 change\"] < 100) & (data_249_final[\"tot2 change\"] > -100)]\n",
+    "# the above code is for when 0 are not removed and you have to filter wrong data by hand\n",
     "\"\"\"fig = px.line(data_249_final, x=data_249_final.index, y=\"tot1 change\", height=600)\n",
     "fig.show()\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"fig = px.line(data_temp, x=data_temp.index, y=\"tot2 change\", height=600)\n",
+    "fig.show()\"\"\";"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Determining new variable correlation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pearson coef: -0.029201957392781062\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import pearsonr, spearmanr, kendalltau\n",
+    "\n",
+    "# pearson\n",
+    "# 249 - hour and year have correlations around 0.16, and the new attribute \"tot1 change\" has 0.147 others are not good\n",
+    "# 248 - tot1 has 0.81, tot2 -0.28, month has 0.44, year - 0.33, others have significantly lower coef....   \n",
+    "\n",
+    "# spearman\n",
+    "# 248- tot1 is good, tot2 is -0.62, month - 0.48, year-0.22\n",
+    "# 249 - tot2 change has 0.53, hour 0.26, \n",
+    "\n",
+    "# kendall \n",
+    "# 249 - hour - 0.21, tot1 change - 0,4, others are too small\n",
+    "# 248 - tot1 - 0.44, tot2 - -0.42, month-0.32, others are too small\n",
+    "pearson_coef_tot1_248, p_value_tot1_248 = kendalltau(data_248_final[\"tot2 change\"], data_248_final[\"analog2\"]) \n",
+    "print(\"Pearson coef:\", pearson_coef_tot1_248)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
