Added methods for visualizing data, added removing of nan timestamps, transformed date into datetime format, made todo list

--- a/notebooks/Module tester.ipynb
+++ b/notebooks/Module tester.ipynb
@@ -18,19 +18,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3254: DtypeWarning:\n",
+      "\n",
+      "Columns (2,3) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "instance = water_monitoring.WaterMonitoringInstance()\n",
-    "instance.read_data(\"../data/water_loss_data_set_1.json\", \"json\")\n",
+    "instance.read_data(\"../data/Benalua Consumption/Benalua 2013.csv\", \";\")\n",
     "\n",
     "# instance.transform_data(\"alicante\") Benalua Consumption/Benalua 2013.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,53 +65,53 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>timeStamp</th>\n",
-       "      <th>idflowmeter</th>\n",
-       "      <th>tot1</th>\n",
-       "      <th>tot2</th>\n",
-       "      <th>analog2</th>\n",
+       "      <th>CA009-52</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>CT005-52</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2018-11-23 07:03:00</td>\n",
-       "      <td>MAG8000_024905H318</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>02/01/2013 3:25:36</td>\n",
+       "      <td>25,98</td>\n",
+       "      <td>31/12/2012 15:30:00</td>\n",
+       "      <td>2460562</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2018-11-23 07:04:00</td>\n",
-       "      <td>MAG8000_024905H318</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>13/03/2013 10:32:12</td>\n",
+       "      <td>78,76678</td>\n",
+       "      <td>31/12/2012 16:00:00</td>\n",
+       "      <td>2460594,75</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2018-11-23 07:06:00</td>\n",
-       "      <td>MAG8000_024905H318</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>13/03/2013 10:32:41</td>\n",
+       "      <td>78,8452</td>\n",
+       "      <td>31/12/2012 16:30:00</td>\n",
+       "      <td>2460623,5</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2018-11-23 07:09:00</td>\n",
-       "      <td>MAG8000_024905H318</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>13/03/2013 10:33:12</td>\n",
+       "      <td>77,53304</td>\n",
+       "      <td>31/12/2012 17:00:00</td>\n",
+       "      <td>2460649,5</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2018-11-23 07:10:00</td>\n",
-       "      <td>MAG8000_024905H318</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>13/03/2013 10:33:41</td>\n",
+       "      <td>74,85148</td>\n",
+       "      <td>31/12/2012 17:30:00</td>\n",
+       "      <td>2460675,5</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -111,68 +122,81 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1395740</th>\n",
-       "      <td>2020-04-01 14:05:00</td>\n",
-       "      <td>MAG8000_024805H318</td>\n",
-       "      <td>977428.25</td>\n",
-       "      <td>-4713.21</td>\n",
-       "      <td>1.54</td>\n",
+       "      <th>793752</th>\n",
+       "      <td>31/12/2013 15:11:55</td>\n",
+       "      <td>74,00881</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1395741</th>\n",
-       "      <td>2020-04-01 14:06:00</td>\n",
-       "      <td>MAG8000_024805H318</td>\n",
-       "      <td>977428.88</td>\n",
-       "      <td>-4713.21</td>\n",
-       "      <td>1.54</td>\n",
+       "      <th>793753</th>\n",
+       "      <td>31/12/2013 15:12:27</td>\n",
+       "      <td>76,03143</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1395742</th>\n",
-       "      <td>2020-04-01 14:07:00</td>\n",
-       "      <td>MAG8000_024805H318</td>\n",
-       "      <td>977429.50</td>\n",
-       "      <td>-4713.21</td>\n",
-       "      <td>1.54</td>\n",
+       "      <th>793754</th>\n",
+       "      <td>31/12/2013 15:12:57</td>\n",
+       "      <td>81,09696</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1395743</th>\n",
-       "      <td>2020-04-01 14:08:00</td>\n",
-       "      <td>MAG8000_024805H318</td>\n",
-       "      <td>977430.12</td>\n",
-       "      <td>-4713.21</td>\n",
-       "      <td>1.54</td>\n",
+       "      <th>793755</th>\n",
+       "      <td>31/12/2013 15:13:28</td>\n",
+       "      <td>76,06879</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1395744</th>\n",
-       "      <td>2020-04-01 14:09:00</td>\n",
-       "      <td>MAG8000_024805H318</td>\n",
-       "      <td>977430.75</td>\n",
-       "      <td>-4713.21</td>\n",
-       "      <td>1.53</td>\n",
+       "      <th>793756</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1395745 rows × 5 columns</p>\n",
+       "<p>793757 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   timeStamp         idflowmeter       tot1     tot2  analog2\n",
-       "0        2018-11-23 07:03:00  MAG8000_024905H318       0.00     0.00     0.00\n",
-       "1        2018-11-23 07:04:00  MAG8000_024905H318       0.00     0.00     0.00\n",
-       "2        2018-11-23 07:06:00  MAG8000_024905H318       0.00     0.00     0.00\n",
-       "3        2018-11-23 07:09:00  MAG8000_024905H318       0.00     0.00     0.00\n",
-       "4        2018-11-23 07:10:00  MAG8000_024905H318       0.00     0.00     0.00\n",
-       "...                      ...                 ...        ...      ...      ...\n",
-       "1395740  2020-04-01 14:05:00  MAG8000_024805H318  977428.25 -4713.21     1.54\n",
-       "1395741  2020-04-01 14:06:00  MAG8000_024805H318  977428.88 -4713.21     1.54\n",
-       "1395742  2020-04-01 14:07:00  MAG8000_024805H318  977429.50 -4713.21     1.54\n",
-       "1395743  2020-04-01 14:08:00  MAG8000_024805H318  977430.12 -4713.21     1.54\n",
-       "1395744  2020-04-01 14:09:00  MAG8000_024805H318  977430.75 -4713.21     1.53\n",
+       "                   CA009-52 Unnamed: 1             CT005-52  Unnamed: 3  \\\n",
+       "0        02/01/2013 3:25:36      25,98  31/12/2012 15:30:00     2460562   \n",
+       "1       13/03/2013 10:32:12   78,76678  31/12/2012 16:00:00  2460594,75   \n",
+       "2       13/03/2013 10:32:41    78,8452  31/12/2012 16:30:00   2460623,5   \n",
+       "3       13/03/2013 10:33:12   77,53304  31/12/2012 17:00:00   2460649,5   \n",
+       "4       13/03/2013 10:33:41   74,85148  31/12/2012 17:30:00   2460675,5   \n",
+       "...                     ...        ...                  ...         ...   \n",
+       "793752  31/12/2013 15:11:55   74,00881                  NaN         NaN   \n",
+       "793753  31/12/2013 15:12:27   76,03143                  NaN         NaN   \n",
+       "793754  31/12/2013 15:12:57   81,09696                  NaN         NaN   \n",
+       "793755  31/12/2013 15:13:28   76,06879                  NaN         NaN   \n",
+       "793756                  NaN        NaN                  NaN         NaN   \n",
        "\n",
-       "[1395745 rows x 5 columns]"
+       "        Unnamed: 4  \n",
+       "0              NaN  \n",
+       "1              NaN  \n",
+       "2              NaN  \n",
+       "3              NaN  \n",
+       "4              NaN  \n",
+       "...            ...  \n",
+       "793752         NaN  \n",
+       "793753         NaN  \n",
+       "793754         NaN  \n",
+       "793755         NaN  \n",
+       "793756         NaN  \n",
+       "\n",
+       "[793757 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
