--- a/notebooks/Alicante data analysis.ipynb
+++ b/notebooks/Alicante data analysis.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -44,198 +44,6 @@
       "Columns (2,3) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CA009-52</th>\n",
-       "      <th>Data-1(Sensor1)</th>\n",
-       "      <th>Data-2(Sensor1)</th>\n",
-       "      <th>Minute</th>\n",
-       "      <th>Hour</th>\n",
-       "      <th>Day</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>Year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2013-01-02 03:25:36</td>\n",
-       "      <td>25</td>\n",
-       "      <td>98</td>\n",
-       "      <td>25</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2013-03-13 10:32:12</td>\n",
-       "      <td>78</td>\n",
-       "      <td>76678</td>\n",
-       "      <td>32</td>\n",
-       "      <td>10</td>\n",
-       "      <td>13</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2013-03-13 10:32:41</td>\n",
-       "      <td>78</td>\n",
-       "      <td>8452</td>\n",
-       "      <td>32</td>\n",
-       "      <td>10</td>\n",
-       "      <td>13</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2013-03-13 10:33:12</td>\n",
-       "      <td>77</td>\n",
-       "      <td>53304</td>\n",
-       "      <td>33</td>\n",
-       "      <td>10</td>\n",
-       "      <td>13</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2013-03-13 10:33:41</td>\n",
-       "      <td>74</td>\n",
-       "      <td>85148</td>\n",
-       "      <td>33</td>\n",
-       "      <td>10</td>\n",
-       "      <td>13</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>793751</th>\n",
-       "      <td>2013-12-31 15:11:25</td>\n",
-       "      <td>75</td>\n",
-       "      <td>4491</td>\n",
-       "      <td>11</td>\n",
-       "      <td>15</td>\n",
-       "      <td>31</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>793752</th>\n",
-       "      <td>2013-12-31 15:11:55</td>\n",
-       "      <td>74</td>\n",
-       "      <td>881</td>\n",
-       "      <td>11</td>\n",
-       "      <td>15</td>\n",
-       "      <td>31</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>793753</th>\n",
-       "      <td>2013-12-31 15:12:27</td>\n",
-       "      <td>76</td>\n",
-       "      <td>3143</td>\n",
-       "      <td>12</td>\n",
-       "      <td>15</td>\n",
-       "      <td>31</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>793754</th>\n",
-       "      <td>2013-12-31 15:12:57</td>\n",
-       "      <td>81</td>\n",
-       "      <td>9696</td>\n",
-       "      <td>12</td>\n",
-       "      <td>15</td>\n",
-       "      <td>31</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>793755</th>\n",
-       "      <td>2013-12-31 15:13:28</td>\n",
-       "      <td>76</td>\n",
-       "      <td>6879</td>\n",
-       "      <td>13</td>\n",
-       "      <td>15</td>\n",
-       "      <td>31</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>793756 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  CA009-52  Data-1(Sensor1)  Data-2(Sensor1)  Minute  Hour  \\\n",
-       "0      2013-01-02 03:25:36               25               98      25     3   \n",
-       "1      2013-03-13 10:32:12               78            76678      32    10   \n",
-       "2      2013-03-13 10:32:41               78             8452      32    10   \n",
-       "3      2013-03-13 10:33:12               77            53304      33    10   \n",
-       "4      2013-03-13 10:33:41               74            85148      33    10   \n",
-       "...                    ...              ...              ...     ...   ...   \n",
-       "793751 2013-12-31 15:11:25               75             4491      11    15   \n",
-       "793752 2013-12-31 15:11:55               74              881      11    15   \n",
-       "793753 2013-12-31 15:12:27               76             3143      12    15   \n",
-       "793754 2013-12-31 15:12:57               81             9696      12    15   \n",
-       "793755 2013-12-31 15:13:28               76             6879      13    15   \n",
-       "\n",
-       "        Day  Month  Year  \n",
-       "0         2      1  2013  \n",
-       "1        13      3  2013  \n",
-       "2        13      3  2013  \n",
-       "3        13      3  2013  \n",
-       "4        13      3  2013  \n",
-       "...     ...    ...   ...  \n",
-       "793751   31     12  2013  \n",
-       "793752   31     12  2013  \n",
-       "793753   31     12  2013  \n",
-       "793754   31     12  2013  \n",
-       "793755   31     12  2013  \n",
-       "\n",
-       "[793756 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -250,138 +58,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Attribute CA009-52 can't be correlated. invalid type promotion\n",
-      "\n",
-      "Column with the most correlation is: Hour. Pearson coef: 0.3790\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\numpy\\lib\\function_base.py:2534: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in true_divide\n",
-      "\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\numpy\\lib\\function_base.py:2535: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in true_divide\n",
-      "\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\scipy\\stats\\_distn_infrastructure.py:903: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in greater\n",
-      "\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\scipy\\stats\\_distn_infrastructure.py:903: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in less\n",
-      "\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\scipy\\stats\\_distn_infrastructure.py:1912: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in less_equal\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[('Data-2(Sensor1)', -0.07361906982354366),\n",
-       " ('Day', -0.001738344347952742),\n",
-       " ('Minute', -0.00029852286813139957),\n",
-       " ('Month', 0.04982170922352415),\n",
-       " ('Hour', 0.37898870898162035),\n",
-       " ('Year', nan)]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "coef_arr = instance.calculate_correlation(\"Data-1(Sensor1)\")\n",
-    "coef_arr"
+    "# coef_arr = instance.calculate_correlation(\"Data-1(Sensor1)\")\n",
+    "# instance.get_nan_rows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CA009-52</th>\n",
-       "      <th>Unnamed: 1</th>\n",
-       "      <th>CT005-52</th>\n",
-       "      <th>Unnamed: 3</th>\n",
-       "      <th>Unnamed: 4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>793756</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       CA009-52 Unnamed: 1 CT005-52 Unnamed: 3  Unnamed: 4\n",
-       "793756      NaN        NaN      NaN        NaN         NaN"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "instance.get_nan_rows()"
+    "analyzer = water_monitoring.Analyzer(instance.get_data_frame())\n",
+    "y_test, y_pred = analyzer.random_forest([\"Data-2(Sensor1)\", \"Hour\"], \"Data-1(Sensor1)\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"fig = px.line(data, x=\"CA009-52\", y=\"Data-1(Sensor1)\", height=600)\n",
-    "fig.show()\"\"\";"
+    "fig.show()\"\"\";\n",
+    "fig = plt.figure(figsize=(18, 8), dpi=100, facecolor='w')\n",
+    "\n",
+    "plt.plot([i for i in range(len(y_test))], y_test, color=\"blue\", label=\"actual\")\n",
+    "plt.plot([i for i in range(len(y_pred))], y_pred, color=\"red\", label=\"predicted\")\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
